--- a/OauthClient/src/main/resources/templates/index.html
+++ b/OauthClient/src/main/resources/templates/index.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"/>
+    <title>第一个vue应用程序</title>
 </head>
 <body>
 <div>
    <a th:href="@{/getCode}" href="show.html">获得code</a>
+
 </div>
 </body>
 </html>
