--- a/OauthClient/src/main/resources/templates/vue.html
+++ b/OauthClient/src/main/resources/templates/vue.html
@@ -95,10 +95,9 @@
             }
         },
         mounted(){
-            var axios
-        .
-            get('data.json')
-                .then(response = > (this.info = response.data));
+            axios
+                .get('data.json')
+                .then(response => (this.info = response.data));
         }
 
     });
